# Sky_pro_-home_work_21_2_layouts

./: catalog.html  category.html  contacts.html  main.html  pyproject.toml  server.py
src/: server.py
